Functional on neoforge